[package]
name = "colonoscopy"
version = "0.1.0"
edition = "2021"


[lib]
name = "colonoscopy"
crate-type = ["cdylib"]


[dependencies]
tokio = { version = "1", features = ["full"] }
axum  = "0.7"
serde = { version = "1.0", features = ["derive"] }
tracing     = "0.1"
tracing-subscriber = "0.3"
anyhow = "1.0"

pyo3 = { version = "0.20", features = ["extension-module", "auto-initialize"] }
pyo3-asyncio = { version = "0.20", features = ["tokio-runtime"] }


